aula desenvolvimento web

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-teste etste
+<!DOCTYPE html>
+<html lang="end"></html>
+<head> <!--TAG de especificação tecnica-->
+    <meta charset="UFT -8">
+    <meta name="viewport" content="windth=,initial-scale = 1.0">
+    <title>Curriculo</title>
+</head>
+<body>
+    <h1>Turma de Desenvolvimento web</h1> <!--h1 Titulo-->
+    <p>Aqui posso escrever meu paragrafo</p> <!--paragrafo-->
+</body>
